--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,93 @@
     border-bottom: 5px solid cyan;
     padding: 0 15px;
 }
+
+.linkHeader {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    font-weight: bolder;
+}
+
+#main {
+    width: 100%;
+    margin: auto;
+}
+
+#container {
+    position: relative;
+    padding: 15px;
+    max-width: 640px;
+    margin: 0 auto;
+}
+
+#bannerWrapper {
+    overflow-x: auto;
+}
+
+#banner {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 15px;
+}
+
+.arrow-left,
+.arrow-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: auto;
+    bottom: 0;
+    font-size: 20px;
+    line-height: 250px;
+    width: 40px;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    background-image: linear-gradient(to left, transparent, black 200%);
+    opacity: 0.2;
+    transition: .2s ease-in-out;
+}
+
+.arrow-right {
+    position: absolute;
+    left: auto;
+    right: 0;
+    font-size: 20px;
+    line-height: 250px;
+    width: 40px;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    background-image: linear-gradient(to right, transparent, black 200%);
+}
+
+.arrow-left:hover,
+.arrow-right:hover {
+    opacity: 1;
+}
+
+.item {
+    width: 250px;
+    height: 250px;
+    flex-shrink: 0;
+    opacity: .6;
+    transition: all 600ms ease-in-out;
+}
+
+.current-item {
+    opacity: 1;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#bannerWrapper::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  #bannerWrapper {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
