--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Unica+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jockey+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    font-family: 'Arial Narrow Bold', sans-serif;
+}
+
+:root {
+    --fonteOne: 'Jockey One', sans-serif ;
+    --fonteTwo: 'Unica One', cursive;
+    --fontThree: 'Kdam Thmor Pro', sans-serif;
 }
 
 #header {
@@ -16,6 +26,7 @@
     color: darkcyan;
     border-bottom: 5px solid cyan;
     padding: 0 15px;
+    font-family: var(--fonteOne);
 }
 
 #navegação_header {
@@ -60,11 +71,11 @@
 
 /*  B A N N E R*/
 
-section.slider{
+.slider{
     margin: 0 auto;
     width: 100%;
     height: auto;
-    padding: 0 !important;
+    padding: 0;
     overflow: hidden;
 }
 
@@ -148,4 +159,73 @@ section.slider{
     .nav-auto, .nav-manual{
         margin-top: 60%;
     }
+}
+
+#secOne {
+    display: grid;
+    grid-template-areas: 
+    "article aside"
+    "article2 aside";
+    width: 100%;
+    height: auto;
+    padding: 25px;
+    margin: 60px 0px;
+    border-top: 2px solid gray;
+}
+
+#lista {
+    grid-area: aside;
+    width: 200px;
+    height: 750px;
+    border-left: 2px solid gray;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+#listaLateral {
+    text-align: center;
+    list-style: none;
+    width: 100%;
+}
+
+.unid  {
+    font-size: 24px;
+    color: darkgreen;
+    font-family: var(--fontThree);
+    text-decoration: none;
+}
+
+#artOne {
+    grid-area: article;
+    width: 1000px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+}
+
+#artOne h2{
+    font-family: var(--fonteTwo);
+    font-size: 32px;
+}
+
+#artOne p {
+    text-indent: 15px;
+    margin-top: 10px;
+}
+
+
+#artTwo {
+    grid-area: article2;
+    width: 1000px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 45px auto;
+}
+
+#artTwo h2{
+    font-family: var(--fonteTwo);
+    font-size: 32px;
+}
+
+#artTwo p {
+    text-indent: 15px;
+    margin-top: 10px;
 }
