--- a/css/style.css
+++ b/css/style.css
@@ -235,3 +235,43 @@
     text-indent: 15px;
     margin-top: 10px;
 }
+
+/* A Q U I  C O M E Ç A  O  F O O T E R */
+
+#footer {
+    width: 100%;
+    height: auto;
+    border-top: 5px solid cyan;
+    box-shadow: 0px 1px 15px #00000067;
+    padding: 75px;
+}
+
+#socialMedia {
+    width: 100%;
+    border-top: 2px solid gray;
+    padding: 15px;
+    position: relative;
+}
+
+#socialWrapper {
+    width: 175px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+#socialWrapper::after {
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    transform: rotate(45deg);
+    content: "Follow me";
+    width: auto ;
+    padding: 15px;
+    background-color: cyan ;
+}
+
+.imgFooter {
+    width: 45px;
+    cursor: pointer;
+}
