--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -11,7 +11,7 @@
         margin: 60px 0px;
         border-top: 2px solid gray;
     }
-    
+
     #lista {
         grid-area: aside;
         display: flex;
@@ -31,7 +31,7 @@
         color: black;
         font-family: var(--fontThree);
         text-decoration: none;
-        padding: 0;
+        padding: 5px;
     }
     
     #artOne {
@@ -79,23 +79,23 @@
 
     .unid {
         font-size: 16px;
-        width: 25%;
+        width: 100%;
         color: black;
         font-family: var(--fontThree);
         text-decoration: none;
-        padding: 0;
+        padding: 5px;
     }
 
     #artOne {
         grid-area: article;
-        width: 600px;
+        width: 100%;
         font-family: Arial, Helvetica, sans-serif;
         margin: 0 auto;
     }
 
     #artTwo {
         grid-area: article2;
-        width: 600px;
+        width: 100%;
         font-family: Arial, Helvetica, sans-serif;
         margin: 45px auto;
     }
