--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@
     display: grid;
     grid-template-areas: 
     "article aside"
-    "article2 aside";
+    "article2  . ";
     width: 100%;
     height: auto;
     padding: 25px 0px;
@@ -178,8 +178,8 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    height: 750px;
     border-left: 2px solid gray;
+    border-bottom: 2px solid gray;
     margin: 0 auto;
     background-color: rgb(243, 238, 238);
     text-align: center;
@@ -203,7 +203,8 @@
 
 #artOne {
     grid-area: article;
-    width: 1000px;
+    width: 100%;
+    padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 auto;
 }
@@ -221,7 +222,8 @@
 
 #artTwo {
     grid-area: article2;
-    width: 1000px;
+    width: 100%;
+    padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 45px auto;
 }
