--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -16,8 +16,8 @@
         grid-area: aside;
         display: flex;
         flex-direction: row;
+        gap: 5px;
         width: 100%;
-        height: 50px;
         border-left: 0px;
         border-bottom: 2px solid blue;
         margin: 0 auto;
@@ -31,7 +31,7 @@
         color: black;
         font-family: var(--fontThree);
         text-decoration: none;
-        padding: 5px;
+        padding: 0px;
     }
     
     #artOne {
@@ -68,8 +68,8 @@
         grid-area: aside;
         display: flex;
         flex-direction: row;
+        gap: 5px;
         width: 100%;
-        height: 50px;
         border-left: 0px;
         border-bottom: 2px solid yellow;
         margin: 0 auto;
@@ -83,7 +83,7 @@
         color: black;
         font-family: var(--fontThree);
         text-decoration: none;
-        padding: 15px;
+        padding: 0px;
     }
 
     #artOne {
