--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -53,7 +53,14 @@
 @media  (max-width: 900px) {
 
     #navegação_header {
-        display: none;
+        margin-top: -100vh;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        padding: 0;
+        transition: .2s;
+        z-index: 1;
+        background-color: beige;
     }
 
     #btnMenu {
@@ -112,6 +119,17 @@
 }
 
 @media screen and (max-width: 600px){
+
+    #navegação_header {
+        margin-top: -100vh;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        padding: 0;
+        transition: .2s;
+        z-index: 1;
+        background-color: beige;
+    }
 
     #btnMenu {
         display: block;
