--- a/css/btnMenu.css
+++ b/css/btnMenu.css
@@ -2,7 +2,6 @@
     display: none;
     width: 50px;
     height: 50px;
-    border: 2px solid black;
     border-radius: 5px;
     background: transparent;
     cursor: pointer;
@@ -17,20 +16,17 @@
     position: relative;
     transform-origin: center;
     transition: 0.2s;
-}
-
-button.ativar {
-    border: 4px solid red;
+    border-radius: 5px;
 }
 
 button.ativar .linha:nth-child(1) {
-    transform: translateY(5px) rotate(-45deg);
-    background-color: red;
+    transform: translateY(8px) rotate(-45deg);
+    background-color: black;
 }
 
 button.ativar .linha:nth-child(3) {
-    transform: translateY(-10px) rotate(45deg);
-    background-color: red;
+    transform: translateY(-8px) rotate(45deg);
+    background-color: black;
 }
 
 button.ativar .linha:nth-child(2) {
