--- a/css/style.css
+++ b/css/style.css
@@ -248,9 +248,22 @@
     padding: 75px 75px 0px 75px;
 }
 
+#footerDescrição {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-bottom: 30px;
+    margin: auto;
+    width: 600px;
+    text-align: center;
+}
+
 #socialMedia {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    border-top: 2px solid gray;
+    border-bottom: 2px solid gray;
     padding: 15px;
     position: relative;
     margin-bottom: 15px;
@@ -261,17 +274,6 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-}
-
-#socialWrapper::after {
-    position: absolute;
-    top: 10px;
-    right: 0px;
-    transform: rotate(45deg);
-    content: "Follow me";
-    width: auto ;
-    padding: 15px;
-    background-color: cyan ;
 }
 
 .imgFooter {
@@ -288,12 +290,17 @@
 }
 
 .divLinks {
+    border-radius: 35px;
+    padding: 10px;
+    background-color: transparent;
+    border: 2px solid gray;
     text-decoration: none;
     color: black;
 }
 
 .divLinks:hover {
     color: gray;
+    border: 2px solid cyan;
 }
 
 
