--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,12 @@
     text-align: center;
 }
 
+.sticky {
+    position: sticky;
+    top: 0;
+    right: 0;
+}
+
 .unid  {
     font-size: 20px;
     width: 100%;
