--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -4,7 +4,10 @@
         grid-template-areas:
         "aside" 
         "article" 
-        "article2" ;
+        "article2" 
+        "article3"
+        "article4"
+        "article5";
         width: 100%;
         height: auto;
         padding: 0px 5px;
@@ -48,6 +51,28 @@
         margin: 45px auto;
     }
 
+    #artThree {
+        grid-area: article3;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto;
+    }
+
+    #artFour {
+        grid-area: article4;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto;
+    }
+
+    #artFive {
+        grid-area: article5;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto 0 auto ;
+    }
+
+
 }
 
 @media  (max-width: 900px) {
@@ -81,7 +106,10 @@
         grid-template-areas:
         "aside"
         "article" 
-        "article2" ;
+        "article2" 
+        "article3"
+        "article4"
+        "article5";
         width: 100%;
         height: auto;
         padding: 0px 5px;
@@ -143,6 +171,29 @@
         color: black;
     }
 
+    #artThree {
+        grid-area: article3;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto;
+    }
+
+    #artFour {
+        grid-area: article4;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto;
+    }
+
+    #artFive {
+        grid-area: article5;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto 0 auto ;
+    }
+
+
+
 }
 
 @media (max-width: 600px){
@@ -181,7 +232,10 @@
         grid-template-areas:
         "aside" 
         "article"
-        "article2";
+        "article2"
+        "article3"
+        "article4"
+        "article5";
         width: 100%;
         height: auto;
         padding: 0px 5px;
@@ -231,6 +285,29 @@
         font-family: Arial, Helvetica, sans-serif;
         margin: 0px auto;
     }
+
+    #artThree {
+        grid-area: article3;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto 0 auto ;
+    }
+
+    #artFour {
+        grid-area: article4;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto 0 auto ;
+    }
+
+    #artFive {
+        grid-area: article5;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 45px auto 0 auto ;
+    }
+
+
 
     #footer {
         width: 100%;
