--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -121,7 +121,7 @@
         grid-area: aside;
         display: flex;
         flex-direction: row;
-        align-item: center;
+        align-items: center;
         gap: 5px;
         width: 100%;
         border-left: 0px;
@@ -248,7 +248,7 @@
         grid-area: aside;
         display: flex;
         flex-direction: row;
-        align-item: center;
+        align-items: center;
         gap: 5px;
         width: 100%;
         border-left: 0px solid gray;
